src/objects/Job_Error_log__c.object
<CustomObject>
    <description>Error log</description>
    <fields>
        <fullName>ErrorTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Cause__c</fullName>
        <label>Error Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <label>Error Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type_Name__c</fullName>
        <label>Error Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loop</fullName>
                </value>
                <value>
                    <fullName>DML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Performance_Log__c</fullName>
        <label>Job Performance Log</label>
        <referenceTo>Job_Performance_Log__c</referenceTo>
        <relationshipLabel>Job Error log</relationshipLabel>
        <relationshipName>Job_Error_log_Per_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_name__c</fullName>
        <label>Job name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Job Error log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Error log Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>